--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "https://fonts.googleapis.com/css?family=Lato:100";
 
-:root{
-    --font-lato:"Lato",Arial,sans-serif;
+:root {
+    --font-lato: "Lato", Arial, sans-serif;
 }
 
 html {
@@ -18,13 +18,13 @@ body {
     font-size: 1.4rem;
 }
 
-.content-click{
+.content-click {
     position: absolute;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    color:#09383e;
+    color: #09383e;
     font-size: 4rem;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     top: 60%;
     left: 50%;
     cursor: pointer;
@@ -225,10 +225,10 @@ h1 {
 .content {
     width: 100%;
     height: 100%;
-    background-image: url(../img/back.jpg);    
+    background-image: url(../img/back.jpg);
 }
 
-.notes-header{
+.notes-header {
     position: relative;
     font-family: var(--font-lato);
     font-size: 4rem;
@@ -237,12 +237,12 @@ h1 {
     margin-bottom: 5%;
 }
 
-.note-card{
+.note-card {
     position: relative;
     width: 35%;
     height: auto;
-    min-height: 20%;    
-    background: #e5e5e5;   
+    min-height: 8%;
+    background: #e5e5e5;
     left: 50%;
     transform: translate(-50%);
     border-radius: 5px;
@@ -251,39 +251,53 @@ h1 {
     margin-bottom: 12px;
 }
 
-.note-card-header{
-    height: 20px;    
+.note-card-header {
+    height: 20px;
     padding: 8px 12px;
     background: #cccccc;
     color: #ff5311;
     font-weight: bold;
 }
 
-.note-card-header span{
+.note-card-header span {
     font-family: var(--font-lato);
     font-size: 2rem;
-    font-style: italic;    
+    font-style: italic;
 }
 
-.note-card-header .buttons{
+.note-card-header .buttons {
     float: right;
-    font-size: 2rem;        
+    font-size: 2rem;
 }
 
-.note-card-header .buttons a{
+.note-card-header .buttons a {
     cursor: pointer;
 }
 
-.note-card-content{
+.note-card-content {
     position: relative;
     width: 95%;
     height: auto;
-    min-height: 20%;    
-    left: 50%;    
+    min-height: 4%;
+    left: 50%;
     transform: translate(-50%);
-    margin-top: 5px;    
+    margin-top: 5px;
 }
 
+.note-textarea {    
+    display: block;
+    box-sizing: padding-box;
+    overflow: hidden;
+    padding: 10px;
+    width: 630px;
+    resize: none;
+    font-size: 14px;
+    margin: 0;
+    border-radius: 6px;
+    box-shadow: 2px 2px 8px rgba(black, .3);
+    border: 0;   
+    line-height:20px;    
+}
 
 
 @keyframes ellipseRotate {
