--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    background: #ff5311;
 }
 
 body {
@@ -239,7 +240,7 @@ h1 {
 
 .note-card {
     position: relative;
-    width: 35%;
+    width: 100%;
     height: auto;
     min-height: 8%;
     background: #e5e5e5;
@@ -299,6 +300,15 @@ h1 {
     line-height: 20px; 
 }
 
+.card-container{   
+    max-height: 715px;
+    overflow: auto;  
+    width: 35%;
+    padding: 36px; 
+    left: 50%;
+    transform: translate(-50%);
+    position: relative;
+}
 
 @keyframes ellipseRotate {
     0% {
